math-core/tests/snapshots/conversion_test__mathstrut.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathstrut"
---
<math>
    <mpadded width="0" style="visibility:hidden"><mo stretchy="false">(</mo></mpadded>
</math>
