math-core/tests/snapshots/conversion_test__matrix.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\begin{pmatrix} x \\\\ y \\end{pmatrix}"
---
<math>
    <mrow>
        <mo>(</mo>
        <mtable>
            <mtr>
                <mtd>
                    <mi>x</mi>
                </mtd>
            </mtr>
            <mtr>
                <mtd>
                    <mi>y</mi>
                </mtd>
            </mtr>
        </mtable>
        <mo>)</mo>
    </mrow>
</math>
