math-core/tests/snapshots/conversion_test__max_with_limits.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\max\\limits_x y"
---
<math>
    <munder>
        <mo movablelimits="false" lspace="0" rspace="0.1667em">max</mo>
        <mi>x</mi>
    </munder>
    <mi>y</mi>
</math>
