math-core/tests/snapshots/conversion_test__max_with_relation.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\max_{x\\in X}"
---
<math>
    <munder>
        <mo movablelimits="true" lspace="0" rspace="0">max</mo>
        <mrow>
            <mi>x</mi>
            <mo lspace="0" rspace="0">∈</mo>
            <mi>X</mi>
        </mrow>
    </munder>
</math>
