math-core/tests/snapshots/conversion_test__max_with_sup_limits.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\max\\limits^x"
---
<math>
    <mover>
        <mo movablelimits="false" lspace="0" rspace="0">max</mo>
        <mi>x</mi>
    </mover>
</math>
