math-core/tests/snapshots/conversion_test__middle_uparrow.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\left(\\frac12\\middle\\uparrow\\frac12\\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mrow>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
            <mo symmetric="true">↑</mo>
            <mfrac>
                <mn>1</mn>
                <mn>2</mn>
            </mfrac>
        </mrow>
        <mo>)</mo>
    </mrow>
</math>
